Card and first feature updates

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -20,26 +20,14 @@
 			<h1>Minnesota Mountain Biking</h1>
 
 		</div>
-		<p id="firstParagraph"
-			style="background-image: url('https://img.freepik.com/free-vector/watercolor-forest-landscape_52683-76385.jpg?w=1380&t=st=1690833315~exp=1690833915~hmac=2c4db9f110c3909e9cc8794b2742e93be713e01ccad91ba8f7c6a838cf8a0285');">
-		<h3>Top Trails</h3>
-		<p id="parksContainer"></p>
+		<p id="firstParagraph">
+		<h3>Saved Favorites</h3>
+		<p id="favoritesContainer"></p>
 		<img id="watercolor"
 			src="https://img.freepik.com/free-vector/watercolor-forest-landscape_52683-76385.jpg?w=1380&t=st=1690833315~exp=1690833915~hmac=2c4db9f110c3909e9cc8794b2742e93be713e01ccad91ba8f7c6a838cf8a0285"
 			alt="watercolor trees">
 
-		<form id="addParkForm">
-			<header>Don't see a park? Add more in to our database below!</header>
-			<label for="addParkName">Park Name</label>
-			<input type="text" id="addParkName" />
-			<label for="addParkAddress">Park Address</label>
-			<input type="text" id="addParkAddress" />
-			<label for="addMilesofTrail">Miles of Trail</label>
-			<input type="number" id="addMilesofTrail" />
-			<label for="addParkURL">Image URL</label>
-			<input type="text" id="addParkURL" />
-			<button type="submit">Add Park!</button>
-		</form>
+
 
 
 		</p>
