Favorites features start

--- a/public/home.html
+++ b/public/home.html
@@ -20,13 +20,17 @@
 			<h1>Minnesota Mountain Biking</h1>
 
 		</div>
-		<p id="firstParagraph"
-			style="background-image: url('https://img.freepik.com/free-vector/watercolor-forest-landscape_52683-76385.jpg?w=1380&t=st=1690833315~exp=1690833915~hmac=2c4db9f110c3909e9cc8794b2742e93be713e01ccad91ba8f7c6a838cf8a0285');">
+		<p id="firstParagraph">
 		<h3>Top Trails</h3>
+		<style>
+			body {
+				background-image: url("https://tinyurl.com/watercolortrees2"), url("https://tinyurl.com/watercolortrees1");
+				background-repeat: no-repeat;
+				background-size: auto;
+				height: 800px
+			}
+		</style>
 		<p id="parksContainer"></p>
-		<img id="watercolor"
-			src="https://img.freepik.com/free-vector/watercolor-forest-landscape_52683-76385.jpg?w=1380&t=st=1690833315~exp=1690833915~hmac=2c4db9f110c3909e9cc8794b2742e93be713e01ccad91ba8f7c6a838cf8a0285"
-			alt="watercolor trees">
 
 		<form id="addParkForm">
 			<header>Don't see a park? Add more in to our database below!</header>
@@ -44,7 +48,6 @@
 
 		</p>
 		<p>
-			<img src="https://tinyurl.com/watercolortrees2" alt="watercolor trees">
 		</p>
 
 
