first three features complete

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -22,24 +22,24 @@
 		</div>
 		<p id="firstParagraph">
 		<h3>Saved Favorites</h3>
+		<style>
+			body {
+				background-image: url("https://tinyurl.com/watercolortrees2");
+				background-repeat: no-repeat;
+				background-size: auto;
+				height: 800px
+			}
+		</style>
 		<p id="favoritesContainer"></p>
-		<img id="watercolor"
-			src="https://img.freepik.com/free-vector/watercolor-forest-landscape_52683-76385.jpg?w=1380&t=st=1690833315~exp=1690833915~hmac=2c4db9f110c3909e9cc8794b2742e93be713e01ccad91ba8f7c6a838cf8a0285"
-			alt="watercolor trees">
 
-
-
-
-		</p>
-		<p>
-			<img src="https://tinyurl.com/watercolortrees2" alt="watercolor trees">
 		</p>
 
 
 	</content>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-	<script src="main.js"></script>
+
 
 </body>
+<script src="favorites.js"></script>
 
 </html>
