added notes feature and additional styling

--- a/public/home.html
+++ b/public/home.html
@@ -26,8 +26,8 @@
 			body {
 				background-image: url("https://tinyurl.com/watercolortrees1");
 				background-repeat: no-repeat;
-				background-size: auto;
-				height: 800px
+				align-content: center;
+
 			}
 		</style>
 		<p id="parksContainer"></p>
@@ -42,7 +42,7 @@
 			<input type="number" id="addMilesofTrail" />
 			<label for="addParkURL">Image URL</label>
 			<input type="text" id="addParkURL" />
-			<button type="submit" id="addParkBtn">Add Park!</button>
+			<button type="submit" class="formBtn">Add Park!</button>
 		</form>
 
 
