--- a/public/favorites.html
+++ b/public/favorites.html
@@ -15,10 +15,9 @@
 	</nav>
 
 	<content>
-		<div><img class="logo"
+		<div id="header1"><img class="logo"
 				src="https://media.istockphoto.com/id/1069124594/vector/man-cyclist-mountain-biker.jpg?s=612x612&w=0&k=20&c=CHKpM4eCcal7TA0P0yMUf_GGACgU11O4CpvR1JksbQU=">
 			<h1>Minnesota Mountain Biking</h1>
-
 		</div>
 		<p id="firstParagraph">
 		<h3>Saved Favorites</h3>
@@ -27,12 +26,21 @@
 				background-image: url("https://tinyurl.com/watercolortrees2");
 				background-repeat: no-repeat;
 				background-size: auto;
-				height: 800px
+
 			}
 		</style>
 		<p id="favoritesContainer"></p>
-
 		</p>
+
+		<form id="addParkNotesForm">
+			<header>Update your personal park notes!</header>
+			<label for="parkSelector">Park Name:</label>
+			<select id="parkSelector"></select>
+			<label for="notesEntry">Notes:</label>
+			<input type='text' id="notesEntry" />
+			<button type="submit" class="formBtn">Add Notes!</button>
+		</form>
+
 
 
 	</content>
