--- a/public/favorites.html
+++ b/public/favorites.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Minnesota Mountain Biking</title>
+	<title>My Favorites</title>
 	<link href="styleshome.css" rel="stylesheet">
 </head>
 
@@ -15,17 +15,18 @@
 	</nav>
 
 	<content>
-		<div id="header1"><img class="logo"
-				src="https://media.istockphoto.com/id/1069124594/vector/man-cyclist-mountain-biker.jpg?s=612x612&w=0&k=20&c=CHKpM4eCcal7TA0P0yMUf_GGACgU11O4CpvR1JksbQU=">
+		<div id="header1">
 			<h1>Minnesota Mountain Biking</h1>
 		</div>
 		<p id="firstParagraph">
 		<h3>Saved Favorites</h3>
 		<style>
 			body {
-				background-image: url("https://tinyurl.com/watercolortrees2");
+				background-image: url("https://img.freepik.com/free-vector/watercolor-lake-scenery_23-2149159406.jpg?w=1380&t=st=1691426584~exp=1691427184~hmac=779d0152eef47e9a170b66e5c784f800bae897deb1ae66fbc97c0c83927f0b64");
 				background-repeat: no-repeat;
-				background-size: auto;
+				background-size: cover;
+				background-attachment: fixed;
+
 
 			}
 		</style>
@@ -45,7 +46,6 @@
 
 	</content>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
 
 </body>
 <script src="favorites.js"></script>
