added sort feature

--- a/public/favorites.html
+++ b/public/favorites.html
@@ -19,7 +19,7 @@
 			<h1>Minnesota Mountain Biking</h1>
 		</div>
 		<p id="firstParagraph">
-		<h3>Saved Favorites</h3>
+		<h3 id="favoritesHeader">Saved Favorites</h3>
 		<style>
 			body {
 				background-image: url("https://img.freepik.com/free-vector/watercolor-lake-scenery_23-2149159406.jpg?w=1380&t=st=1691426584~exp=1691427184~hmac=779d0152eef47e9a170b66e5c784f800bae897deb1ae66fbc97c0c83927f0b64");
