--- a/public/favorites.html
+++ b/public/favorites.html
@@ -30,7 +30,8 @@
 
 			}
 		</style>
-		<p id="favoritesContainer"></p>
+		<p id="favoritesContainer">
+		</p>
 		</p>
 
 		<form id="addParkNotesForm">
