--- a/public/home.html
+++ b/public/home.html
@@ -58,9 +58,9 @@
 				<div class="break"></div>
 				<label for="addParkRegion">Select Region</label>
 				<select name="addParkRegion" id="addParkRegion">
+					<option value="Twin Cities/Central">Twin Cities/Central</option>
 					<option value="Northern">Northern</option>
 					<option value="Southern">Southern</option>
-					<option value="Twin Cities/Central">Twin Cities/Central</option>
 				</select>
 				<div class="break"></div>
 				<button type="submit" class="formBtn">Add Park!</button>
@@ -74,7 +74,7 @@
 			<h3>Top Parks</h3>
 
 			<form id="sortParksForm2">
-				<header>Sort Your Parks:</header>
+				<header>Filter Your Parks:</header>
 				<label for="regionSelection">Select Region</label>
 				<select name="regionSelection" id="regionSelection">
 					<option value="Twin Cities/Central">Twin Cities/Central</option>
