--- a/public/favorites.html
+++ b/public/favorites.html
@@ -15,14 +15,15 @@
 	</nav>
 
 	<content>
-		<div id="header1">
-			<h1>Minnesota Mountain Biking</h1>
-		</div>
+		<header>
+			<h1>Minnesota Mountain Biking
+			</h1>
+		</header>
 		<p id="firstParagraph">
 		<h3 id="favoritesHeader">Saved Favorites</h3>
 		<style>
 			body {
-				background-image: url("https://img.freepik.com/free-vector/watercolor-lake-scenery_23-2149159406.jpg?w=1380&t=st=1691426584~exp=1691427184~hmac=779d0152eef47e9a170b66e5c784f800bae897deb1ae66fbc97c0c83927f0b64");
+				background-image: url("https://img.freepik.com/free-vector/watercolor-lake-scenery_23-2149159406.jpg?w=1800&t=st=1691597104~exp=1691597704~hmac=5993bcbe43fcd0fa9f4cf81dc7556b6d5b43835e6fbfcfe417ad7336f942cc3e");
 				background-repeat: no-repeat;
 				background-size: cover;
 				background-attachment: fixed;
@@ -42,8 +43,6 @@
 			<input type='text' id="notesEntry" />
 			<button type="submit" class="formBtn">Add Notes!</button>
 		</form>
-
-
 
 	</content>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
