--- a/public/home.html
+++ b/public/home.html
@@ -19,7 +19,7 @@
 		<p id="firstParagraph">
 			<style>
 				body {
-					background-image: url("https://img.freepik.com/free-vector/watercolor-lake-scenery_23-2149159406.jpg?w=1380&t=st=1691426584~exp=1691427184~hmac=779d0152eef47e9a170b66e5c784f800bae897deb1ae66fbc97c0c83927f0b64");
+					background-image: url("https://img.freepik.com/free-vector/watercolor-lake-scenery_23-2149159406.jpg?w=1800&t=st=1691597104~exp=1691597704~hmac=5993bcbe43fcd0fa9f4cf81dc7556b6d5b43835e6fbfcfe417ad7336f942cc3e");
 					background-repeat: no-repeat;
 					background-size: cover;
 					background-attachment: fixed;
@@ -27,20 +27,18 @@
 				}
 			</style>
 
-		<div id="headerDiv">
+		<header>
 			<h1>Minnesota Mountain Biking
 			</h1>
-		</div>
+		</header>
 
-
-
-		<div id="openingContent">
-			<div id="welcomeHeader">
+		<main>
+			<article>
 				<h2>Welcome to the Minnesota Mountain Biking site!</h2>
 				<p>This is a community created database of favorite mountain biking parks from
 					around the state. Add parks to your "Favorites" to keep a log of you own experiences and for easy
 					access. Please explore and enjoy!</p>
-			</div>
+			</article>
 
 			<form id="addParkForm">
 				<header>Don't see a park you enjoy? Add it to our database below!</header>
@@ -68,7 +66,7 @@
 
 
 			</p>
-		</div>
+		</main>
 		<p>
 		<div id="header3">
 			<h3>Top Parks</h3>
@@ -92,8 +90,9 @@
 		</div>
 		<p id="parksContainer"></p>
 		</p>
-
-		<h5>Thanks for visiting Kathryn's capstone! Ride on &#128690</h5>
+		<footer>
+			<h5>Thanks for visiting Kathryn's capstone! Ride on &#128690</h5>
+		</footer>
 	</content>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
